# identity

./: .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: test.sh
src/: cli.rs  config.rs  identity.rs  input.rs  main.rs  switch.rs  whoami.rs
src/cargo/: credentials.rs  mod.rs  switch.rs  whoami.rs
src/git/: check.rs  cli.rs  common.rs  credentials.rs  hook.rs  install.rs  mod.rs  run.rs  switch.rs  whoami.rs
test/: entry.sh  test_cargo.sh  test_git.sh  test_verify.sh
