[package]
name = "identity-cli"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "A tool for managing your identity from the command line"
homepage = "https://github.com/EphyraSoftware/identity"
repository = "https://github.com/EphyraSoftware/identity"
readme = "README.md"

[[bin]]
name = "identity"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
home = "0.5.4"
inquire = "0.5.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.7.2"
url = "2"
